welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:6: error: not found: value somme
    return somme
           ^