welcome.lessons.welcome.bat.bool2.TeenSum.scala.code
def teenSum(a:Int, b:Int):Int = {
  var sommme:Int=a+b
  if((a>=13 && a<=19)||(b>=13 && b<=19)){
    return 19
  } else{
    return somme
  }
}
